# 18-team-timeline-ai

./: .dockerignore  .gitignore  README.md  README.txt  download.py  init.sh  main.py  pyproject.toml  sentiment.py.lprof  summarization.py  test_comment.py  test_db.py  test_inference.py  test_sentiment_analyzer.py  test_totalSummary.py  test_totalSummary.py.lprof
.github/ISSUE_TEMPLATE/: 기능-제안.md  리팩토링-제안.md  버그-리포트.md
.github/workflows/: build.yml  deploy-ai-api.yml
ai_models/: host.py  manager.py  pipeline.py  runner.py  store.py  summarizer.py
ai_models/graph/: Summary.py  base.py  classify.py  host.py  total_summary.py
api/: comment.py  hot.py  merge.py  router.py  timeline.py
classify/: cluster.py  embedding.py  sentiment.py  storage.py
config/: prompts.py  settings.py
docker/: Dockerfile.api  Dockerfile.vllm  deploy.sh  ollama.sh
inference/: embedding.py  host.py  manager.py
models/: response_schema.py  timeline_card.py
pipelines/: summary_pipeline.py  total_pipeline.py
schemas/: response_schema.py
scrapers/: article_extractor.py  base_searcher.py  daum_vclip_searcher.py  filter.py  parse_date.py  serpapi.py  serper.py  url_to_img.py  youtube_searcher.py
scripts/: deploy.sh  download_dataset.py  download_model.py  download_open_model.py  init.sh  make_db.py  manage_vllm.sh  run_vllm.sh  run_vllm_server.py
services/: category.py  classify.py  news_tag.py  sentiment.py  tagger.py
test/: test_article.py  test_embedding.py  test_totalSummary.py
test/functional/: test_comment_api.py  test_hot_api.py  test_merge_api.py  test_timeline_api.py
test/integration/: test_batch_manager_host_integration.py  test_comment_pipeline_integration.py  test_pipeline_integration.py
test/units/: test_article_extractor.py  test_sentiment_aggregator.py  test_serper_scraper.py  test_youtube_searcher.py
util/: env_utils.py  error_utils.py  exceptions.py  handling.py  logger.py  metrics.py  storage.py  store.py  timeline_utils.py  url_utils.py
utils/: env_check.py  env_utils.py  error_utils.py  handling.py  json_logger.py  logger.py  storage.py  store.py  timeline_utils.py  url_utils.py
