[project]
name = "dev"
version = "0.1.0"
description = ""
authors = [
    {name = "phur99",email = "skerrigen12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "newspaper3k (>=0.2.8,<0.3.0)",
    "lxml-html-clean (>=0.4.2,<0.5.0)",
    "pykakao (>=0.0.7,<0.0.8)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<1.0.0)",
    "google-api-python-client (>=2.166.0,<3.0.0)",
    "slowapi (==0.1.9)",
    "tqdm (>=4.67.1,<5.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "fastapi (==0.115.8)",
    "pydantic (==2.10.6)",
    "qdrant-client[grpc] (>=1.14.2,<2.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
]

[[tool.poetry.source]]
name = "flashinfer"
url = "https://flashinfer.ai/whl/cu124/torch2.6/"
priority = "explicit"

[project.optional-dependencies]
gpu = [
    "vllm (==0.8.5)",
    "triton (==3.2.0)",
    "pyzmq (==25.1.1)",   
]
test = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "line-profiler (>=4.2.0,<5.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "twisted (>=24.11.0,<25.0.0)",
]
download = [
    "huggingface (>=0.0.1,<0.0.2)",
    "datasets (>=3.6.0,<4.0.0)",
    "huggingface-hub (>=0.30.0,<1.0.0)",
]
[tool.poetry.extras]
with-gpu = ["gpu"]
with-test = ["test"]
with-download = ["download"]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# 아래 섹션은 black의 설정
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# 아래 섹션은 flake8의 설정
[tool.flake8]
ignore = "E203, E501, W503"
max-line-length = 88
exclude = ".git,__pycache__,docs/,old/,build/,dist/"
[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
