[project]
name = "dev"
version = "0.1.0"
description = ""
allow-prereleases = true
authors = [
    {name = "phur99",email = "skerrigen12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langgraph (>=0.3.29,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "newspaper3k (>=0.2.8,<0.3.0)",
    "lxml-html-clean (>=0.4.2,<0.5.0)",
    "huggingface (>=0.0.1,<0.0.2)",
    "openai (>=1.76.0,<2.0.0)",
    "pykakao (>=0.0.7,<0.0.8)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<1.0.0)",
    "google-api-python-client (>=2.166.0,<3.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "fastapi (==0.115.8)",
    "pydantic (==2.10.6)",
    "slowapi (==0.1.9)",
    "uvicorn (==0.34.2)",
    "opentelemetry-api (==1.26.0)",
    "opentelemetry-sdk (==1.26.0)",
    "opentelemetry-exporter-otlp (==1.26.0)",
]

[[tool.poetry.source]]
name = "flashinfer"
url = "https://flashinfer.ai/whl/cu124/torch2.6/"
priority = "explicit"


[tool.poetry.extras]
with-gpu = ["gpu"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# 아래 섹션은 black의 설정
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# 아래 섹션은 flake8의 설정
[tool.flake8]
ignore = "E203, E501, W503"
max-line-length = 88
exclude = ".git,__pycache__,docs/,old/,build/,dist/"
[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
