[project]
name = "dev"
version = "0.1.0"
description = ""
authors = [
    {name = "phur99",email = "skerrigen12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "lxml-html-clean (>=0.4.2,<0.5.0)",
    "pykakao (>=0.0.7,<0.0.8)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<1.0.0)",
    "google-api-python-client (>=2.166.0,<3.0.0)",
    "slowapi (==0.1.9)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "fastapi (==0.115.8)",
    "pydantic (==2.10.6)",
    "qdrant-client[grpc] (>=1.14.2,<2.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "scikit-learn (==1.5.1)",
    "sentence-transformers (==4.1.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "numpy (==1.26.4)",
    "openai (>=1.84.0,<2.0.0)",
    "aiohttp (>=3.12.12,<4.0.0)",
]

[[tool.poetry.source]]
name = "flashinfer"
url = "https://flashinfer.ai/whl/cu124/torch2.6/"
priority = "explicit"

[tool.poetry.group.gpu.dependencies]
vllm = "==0.8.5"
pyzmq = "==25.1.1"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3.5,<9.0.0"
pytest-asyncio = ">=0.26.0,<0.27.0"
pytest-tornasync = ">=0.6.0.post2,<0.7.0"
pytest-trio = ">=0.8.0,<0.9.0"
pytest-twisted = ">=1.14.3,<2.0.0"
line-profiler = ">=4.2.0,<5.0.0"
anyio = ">=4.9.0,<5.0.0"
twisted = ">=24.11.0,<25.0.0"

[tool.poetry.group.download.dependencies]
huggingface-hub = ">=0.30.0,<1.0.0"
transformers =">=4.52.3,<5.0.0"
datasets =">=3.6.0,<4.0.0"

[tool.poetry.group.monitor.dependencies]
opentelemetry-api = "==1.26.0"
opentelemetry-sdk = "==1.26.0"
opentelemetry-exporter-otlp = "==1.26.0"
opentelemetry-instrumentation-fastapi = "==0.47b0"
opentelemetry-instrumentation-requests = "==0.47b0"
opentelemetry-instrumentation-urllib = "==0.47b0"
opentelemetry-instrumentation-logging = "==0.47b0"
opentelemetry-instrumentation-sqlalchemy = "==0.47b0"

[tool.poetry]
exclude = ["docker/*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

